MDEV-25099: Inconsistent error upon updating read-only table with ROW_FORMAT=COMPRESSED

Analysis:

Warning level is incorrect
Fix:
Changed to correct warning level